# designerPlugins

./: .codespell_ignore_words.txt  .directory  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.user.2.6pre1  README.md  ito_designerPlugins.kdev4  itomDesignerPlugins.qrc
dataObjectTable/: CMakeLists.txt  CMakeLists.txt.orig  dataObjectDelegate.cpp  dataObjectDelegate.h  dataObjectModel.cpp  dataObjectModel.h  dataObjectTable.cpp  dataObjectTable.h  dataobjecttablefactory.cpp  dataobjecttablefactory.h  pluginVersion.h  version.rc
evaluateGeometrics/: CMakeLists.txt  CMakeLists.txt.orig  dialogAddRelation.cpp  dialogAddRelation.h  dialogDeleteRelation.cpp  dialogDeleteRelation.h  dialogRelation.ui  dialogSettings.cpp  dialogSettings.h  dialogSettings.ui  evaluateGeometrics.cpp  evaluateGeometrics.h  evaluateGeometricsPlugin.cpp  evaluateGeometricsPlugin.h  evaluateGeometricsPlugin.qrc  plotTable.cpp  plotTable.h  plotTreeWidget.cpp  plotTreeWidget.h  pluginVersion.h  pluginVersion.h.in
itom1DQwtFigurePlugin/: CMakeLists.txt  dataObjectSeriesData.cpp  dataObjectSeriesData.h  dialog1DScale.cpp  dialog1DScale.h  dialog1DScale.ui  itom1DQwtFigure.cpp  itom1DQwtFigure.h  itom1DQwtFigurePlugin.cpp  itom1DQwtFigurePlugin.h  itom1DQwtFigurePlugin.qrc  plot1DWidget.cpp  plot1DWidget.h  pluginVersion.h  qwtPlotCurveDataObject.cpp  qwtPlotCurveDataObject.h  valuepicker1d.cpp  valuepicker1d.h  version.rc
itom1DQwtPlot/: CMakeLists.txt  CMakeLists.txt.orig  dataObjectSeriesData.cpp  dataObjectSeriesData.h  dataObjectSeriesDataXY.cpp  dataObjectSeriesDataXY.h  dialog1DScale.cpp  dialog1DScale.h  dialog1DScale.ui  drawItem.cpp  drawItem.h  itom1DQwtPlot.cpp  itom1DQwtPlot.h  itom1DQwtPlotEnums.h  itom1DQwtPlotPlugin.cpp  itom1DQwtPlotPlugin.h  itom1DQwtPlotPlugin.qrc  itomPlotMarker.cpp  itomPlotMarker.h  plot1DWidget.cpp  plot1DWidget.h  pluginVersion.h  pluginVersion.h.in  qwtPlotCurveDataObject.cpp  qwtPlotCurveDataObject.h  qwtPlotCurveProperty.cpp  qwtPlotCurveProperty.h  valuepicker1d.cpp  valuepicker1d.h  widgetCurveProperties.cpp  widgetCurveProperties.h  widgetCurveProperties.ui
itom2DGraphicView/: CMakeLists.txt  CMakeLists.txt.orig  dObjToQImage.cpp  dObjToQImage.h  dialog2DScale.cpp  dialog2DScale.h  dialog2DScale.ui  framework.h  graphicViewPlot.cpp  graphicViewPlot.h  graphicViewPlugin.cpp  graphicViewPlugin.h  plotWidget.cpp  plotWidget.h  pluginVersion.h
itom2DQwtPlot/: CMakeLists.txt  CMakeLists.txt.orig  dataObjItem.cpp  dataObjItem.h  dataObjRasterData.cpp  dataObjRasterData.h  dialog2DScale.cpp  dialog2DScale.h  dialog2DScale.ui  drawItem.cpp  drawItem.h  itom2dqwtplot.cpp  itom2dqwtplot.h  itom2dqwtplotenums.h  itom2dqwtplotplugin.cpp  itom2dqwtplotplugin.h  multiPointPickerMachine.cpp  plotCanvas.cpp  plotCanvas.h  pluginVersion.h  pluginVersion.h.in  valuePicker2d.cpp  valuePicker2d.h
itom2dQwtPlot/: CMakeLists.txt  dataObjItem.cpp  dataObjItem.h  dataObjRasterData.cpp  dataObjRasterData.h  dialog2DScale.cpp  dialog2DScale.h  dialog2DScale.ui  itom2dqwtplot.cpp  itom2dqwtplot.h  itom2dqwtplotplugin.cpp  itom2dqwtplotplugin.h  multiPointPickerMachine.cpp  multiPointPickerMachine.h  plotCanvas.cpp  plotCanvas.h  userInteractionPlotPicker.cpp  userInteractionPlotPicker.h  valuePicker2d.cpp  valuePicker2d.h  version.rc
itomIsoGLFigurePlugin/: CMakeLists.txt  Find3DCONNEXION.cmake  itomIsoGLFigure.cpp  itomIsoGLFigure.h  itomIsoGLFigurePlugin.cpp  itomIsoGLFigurePlugin.h  itomIsoGLFigurePlugin.qrc  plotIsoGLWidget.cpp  plotIsoGLWidget.h  pluginVersion.h  pluginVersion.h.in  version.rc
itomQwtPlotBase/: CMakeLists.txt  dialogExportProperties.cpp  dialogExportProperties.h  drawItem.cpp  drawItem.h  itomColorMap.cpp  itomColorMap.h  itomLogLogScaleEngine.cpp  itomLogLogScaleEngine.h  itomPlotMagnifier.cpp  itomPlotMagnifier.h  itomPlotPicker.cpp  itomPlotPicker.h  itomPlotZoomer.cpp  itomPlotZoomer.h  itomQwtDObjFigure.cpp  itomQwtDObjFigure.h  itomQwtPlot.cpp  itomQwtPlot.h  itomQwtPlotBase.h  itomQwtPlotEnums.h  itomQwtPlotPanner.cpp  itomQwtPlotPanner.h  markerModel.cpp  markerModel.h  markerWidget.cpp  markerWidget.h  multiPointPickerMachine.cpp  multiPointPickerMachine.h  userInteractionPlotPicker.cpp  userInteractionPlotPicker.h
matplotlibFigure/: CMakeLists.txt  matplotlibFigure.qrc  matplotlibWidget.cpp  matplotlibWidget.h  matplotlibfigure.cpp  matplotlibfigure.h  matplotlibfigurefactory.cpp  matplotlibfigurefactory.h  pluginVersion.h  version.rc
matplotlibPlot/: CMakeLists.txt  CMakeLists.txt.orig  dialogEditProperties.h  matplotlibSubfigConfig.h  matplotlibSubfigConfig.ui  matplotlibWidget.cpp  matplotlibWidget.h  matplotlibplot.cpp  matplotlibplot.h  matplotlibplotfactory.cpp  matplotlibplotfactory.h  pluginVersion.h  pluginVersion.h.in
motorController/: CMakeLists.txt  CMakeLists.txt.orig  motorController.cpp  motorController.h  motorController.h.bak  motorControllerfactory.cpp  motorControllerfactory.h  pluginVersion.h  pluginVersion.h.in  version.rc
qwt/: CHANGES  CHANGES-6.2  CMakeLists.txt  CMakeLists.txt.orig  COPYING  INSTALL  Makefile  README  qwt.prf  qwt.pro  qwtbuild.pri  qwtconfig.pri
slider2D/: CMakeLists.txt  pluginVersion.h  pluginVersion.h.in  slider2D.cpp  slider2D.h  slider2DFactory.cpp  slider2DFactory.h
twipOGLPlugin/: CMakeLists.txt  aboutTwip.h  aboutTwip.ui  copying.txt  framework.h  pluginVersion.h  pluginVersion.h.in  shaderEngines.h  twipOGLFigure.cpp  twipOGLFigure.h  twipOGLFigure.qrc  twipOGLLegend.cpp  twipOGLLegend.h  twipOGLPlugin.cpp  twipOGLPlugin.h  twipOGLWidget.cpp  twipOGLWidget.h
vtk3dVisualizer/: CMakeLists.txt  CustomTypes.cpp  CustomTypes.h  Vec3fProperty.cpp  Vec3fProperty.h  coordSysProperty.cpp  coordSysProperty.h  item.cpp  item.h  itemCanvas.cpp  itemCanvas.h  itemGeometry.cpp  itemGeometry.h  itemPointCloud.cpp  itemPointCloud.h  itemPointCloudNormal.cpp  itemPointCloudNormal.h  itemPolygonMesh.cpp  itemPolygonMesh.h  pluginVersion.h  pluginVersion.h.in  pointCloudHandlerGenericFields.h  treeWidgetKeyEater.cpp  treeWidgetKeyEater.h  vtk3dVisualizer.cpp  vtk3dVisualizer.h  (+4 more)
(+165 files in other folders)
